criando projeto do capitulo 20

--- a/exercicio/ex023/tabela01.html
+++ b/exercicio/ex023/tabela01.html
@@ -33,6 +33,9 @@
         td.num{
             text-align: right;
         }
+        td.total{
+            text-align: center;
+        }
 
     </style>
 </head>
@@ -44,29 +47,204 @@
         População das Unidades Federativas do Brasil
     </caption>
     <thead>
-       <th scope="col">Estado</th>
+        <th scope="col">Posição</th>
+        <th scope="col">Federação</th>
+        <th scope="col">População</th>
         <th scope="col">População</th>
     </thead>
     <tbody>
         <tr>
+            <td>1</td>
             <td>São Paulo</td>
             <td class="num">45.910.042</td>
+
+            <td>Espanha 46kk</td>
         </tr>
         <tr>
-            <td>Rio de Janeiro</td>
-            <td class="num">11.254.943</td>
-        </tr>
-        <tr>
+            <td>2</td>
             <td>Minas Gerais</td>
             <td class="num">21.000.000</td>
+
+            <td>SriLanka 20kk</td>
         </tr>
         <tr>
+            <td>3</td>
+            <td>Rio de Janeiro</td>
+            <td class="num">17.463.349</td>
+
+            <td>Países Baixos 17kk</td>
+        </tr>
+        <tr>
+            <td>4</td>
             <td>Bahia</td>
             <td class="num">14.373.054</td>
+
+            <td>Chade 14kk</td>
         </tr>
         <tr>
+            <td>5</td>
             <td>Parana</td>
             <td class="num">11.423.957</td>
+
+            <td>Bolivia 11k<k/td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Rio Grande do Sul</td>
+            <td class="num">11.466.630</td>
+
+            <td>Bélgica 11kk</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>Pernambuco</td>
+            <td class="num">9.647.793</td>
+
+            <td>Bielorússia 9kk</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>Ceará</td>
+            <td class="num">9.240.580</td>
+
+            <td>Emirados Arabes Unidos 9kk</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Pará</td>
+            <td class="num">8.777.124</td>
+
+            <td>Áustria 8kk</td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>Santa Catarina</td>
+            <td class="num">7.338.473</td>
+
+            <td>Sérvia 8kk</td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>Goiás</td>
+            <td class="num">7.206.589</td>
+
+            <td>Paraguai 7k</td>
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>Maranhão</td>
+            <td class="num">7.153.262</td>
+
+            <td>Paraguai 7kk</td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>Amazonas</td>
+            <td class="num">4.269.995</td>
+
+            <td>Líbano 4kk</td>
+        </tr>
+        <tr>
+            <td>14</td>
+            <td>Espírito Santo</td>
+            <td class="num">4.108.508</td>
+
+            <td>Líbano 4kk</td>
+        </tr>
+        <tr>
+            <td>15</td>
+            <td>Paraíba</td>
+            <td class="num">4.059.905</td>
+
+            <td>Líbano 4kk</td>
+        </tr>
+        <tr>
+            <td>16</td>
+            <td>Mato Grosso</td>
+            <td class="num">3.567.234</td>
+
+            <td>Uruguai 3kk</td>
+        </tr>
+        <tr>
+            <td>17</td>
+            <td>Rio Grande do Norte</td>
+            <td class="num">3.560.903</td>
+
+            <td>Uruguai 3kk</td>
+        </tr>
+        <tr>
+            <td>18</td>
+            <td>Alagos</td>
+            <td class="num">3.365.351</td>
+
+            <td>Uruguai 3kk</td>
+        </tr>
+        <tr>
+            <td>19</td>
+            <td>Piauí</td>
+            <td class="num">3.289.290</td>
+
+            <td>Kuwait 3k<k/td>
+        </tr>
+        <tr>
+            <td>20</td>
+            <td>Distrito Federal</td>
+            <td class="num">3.094.325</td>
+
+            <td>Lituânica 3kk</td>
+        </tr>
+        <tr>
+            <td>21</td>
+            <td>Mato Grosso do Sul</td>
+            <td class="num">2.839.188</td>
+
+            <td>Jamaica 2kk</td>
+        </tr>
+        <tr>
+            <td>22</td>
+            <td>Sergipe</td>
+            <td class="num">2.338.474</td>
+
+            <td>Namíbia 2kk</td>
+        </tr>
+        <tr>
+            <td>23</td>
+            <td>Rondônia</td>
+            <td class="num">1.848.278</td>
+
+            <td>Gabão 2kk</td>
+        </tr>
+        <tr>
+            <td>24</td>
+            <td>Tocantins</td>
+            <td class="num">1.607.363</td>
+
+            <td>Bahrein 1kk</td>
+        </tr>
+        <tr>
+            <td>25</td>
+            <td>Acre</td>
+            <td class="num">906.876</td>
+
+            <td>Fiji 800k</td>
+        </tr>
+        <tr>
+            <td>26</td>
+            <td>Amapá</td>
+            <td class="num">877.613</td>
+
+            <td>Fiji 800k</td>
+        </tr>
+        <tr>
+            <td>27</td>
+            <td>Roraima</td>
+            <td class="num">652.713</td>
+
+            <td>Luxemburgo 562k</td>
+        </tr>
+        <tr >
+            <td colspan="2">Total</td>
+            <td class="total" colspan="2">213.317.639</td>
         </tr>
     </tbody>
     <tfoot>
