--- a/exercicio/ex023/tabela02.html
+++ b/exercicio/ex023/tabela02.html
@@ -59,6 +59,25 @@
                 <td>Papel</td>
                 <td>Hulk</td>
             </tr>
+            <tr>
+                <td rowspan="3">Homens</td>
+                <td>Andre Luis</td>
+                <td>Homem de Ferro</td>
+                <td>O dono da Festa</td>
+                <td>Veloses e Furiosos</td>
+            </tr>
+            <tr>
+                <td>Luiz Algusto</td>
+                <td>Jogos Mortais</td>
+                <td>Homen Aranha</td>
+                <td>Anaconda</td>
+            </tr>
+            <tr>
+                <td>Ricardo Silva</td>
+                <td>11 homens e 1 segredo</td>
+                <td>Batman</td>
+                <td>Super Homen</td>
+            </tr>
         </tbody>
     </table>
 </body>
